test/testdata/functions/anonymous/missing_3_args_error.lox
var add = fun(a, b, c) {
  print a + b + c;
};

add(); // error: (anonymous)() accepts 3 arguments but 0 were given
